--- a/themes/esv-deggendorf/layouts/partials/header.html
+++ b/themes/esv-deggendorf/layouts/partials/header.html
@@ -1,2 +1,10 @@
-<h1>{{ site.Title }}</h1>
-{{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+<div class="flex items-center justify-center w-full">
+    <div class="flex items-center justify-center lg:justify-between py-3 w-full max-w-7xl">
+        {{ with resources.Get .Site.Params.logo }}
+            <a href="/">
+                <img src="{{ .RelPermalink }}" class="hidden lg:block w-28 rounded-sm">
+            </a>
+        {{ end }}
+        {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+    </div>
+</div>
