--- a/themes/esv-deggendorf/layouts/_default/home.html
+++ b/themes/esv-deggendorf/layouts/_default/home.html
@@ -1,7 +1,5 @@
 {{ define "main" }}
-  {{ .Content }}
-  {{ range site.RegularPages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
+  <div class="flex flex-col items-center gap-4 p-4 lg:p-0 lg:py-4">
+    {{ .Content }}
+  </div>
 {{ end }}
