--- a/themes/esv-deggendorf/layouts/partials/footer.html
+++ b/themes/esv-deggendorf/layouts/partials/footer.html
@@ -1,1 +1,3 @@
-<p>Copyright {{ now.Year }}. All rights reserved.</p>
+<p class="flex items-center justify-center py-4 text-sm">
+    Copyright &copy; {{ now.Year }} - ESV Deggendorf
+</p>
