--- a/themes/esv-deggendorf/layouts/_default/home.html
+++ b/themes/esv-deggendorf/layouts/_default/home.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="flex flex-col items-center gap-4 p-4 lg:p-0 lg:py-4">
+  <div class="flex flex-col items-center gap-4">
     {{ .Content }}
   </div>
 {{ end }}
