--- a/themes/esv-deggendorf/layouts/_default/list.html
+++ b/themes/esv-deggendorf/layouts/_default/list.html
@@ -1,4 +1,15 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
+  <div class="flex flex-col items-center lg:items-start gap-8">
+    <div class="flex flex-col items-center lg:items-start gap-4">
+      {{ .Content }}
+    </div>
+    <div class="flex flex-col lg:flex-row flex-wrap items-center lg:items-start gap-4">
+      {{ range .Pages }}
+        <div class="flex flex-col p-4 mb-4 border-2 border-zinc-400 rounded-md w-96 gap-2">
+          <h3><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h3>
+          {{ .Summary }}
+        </div>
+      {{ end }}
+    </div>
+  </div>
 {{ end }}
