--- a/themes/esv-deggendorf/layouts/partials/header.html
+++ b/themes/esv-deggendorf/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center w-full">
+<div class="flex flex-col items-center justify-center w-full">
     <div class="flex items-center justify-center lg:justify-between py-3 w-full max-w-7xl">
         {{ with resources.Get .Site.Params.logo }}
             <a href="/">
@@ -6,5 +6,8 @@
             </a>
         {{ end }}
         {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+    </div>
+    <div class="flex items-center justify-center w-full h-44 bg-red-800 opacity-40">
+        <h1>{{ .Title }}</h1>
     </div>
 </div>
