--- a/themes/esv-deggendorf/layouts/_default/baseof.html
+++ b/themes/esv-deggendorf/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body class="bg-zinc-200 text-zinc-800 box-border font-sans">
+  <body class="bg-zinc-200 text-zinc-800 box-border font-avenir">
     <div class="flex flex-col h-screen m-0">
       <header class="bg-zinc-800 text-zinc-200 static w-full">
         {{ partial "header.html" . }}
