--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,35 +3,46 @@
 @tailwind utilities;
 
 @layer base {
-    h1 {
-        @apply text-4xl;
-    }
-    h2 {
-        @apply text-3xl;
-    }
-    h3 {
-        @apply text-2xl;
-    }
-    h4 {
-        @apply text-xl;
-    }
-    a:hover {
-        @apply text-red-800;
-    }
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+  a:hover {
+    @apply text-zinc-500;
+  }
 }
 
 .pagination {
-    @apply flex;
-    @apply gap-2;
+  @apply flex;
+  @apply gap-2;
 }
 
 .page-item {
-    @apply bg-zinc-300;
-    @apply hover:bg-zinc-400;
-    @apply rounded-md;
-    @apply p-2;
+  @apply p-2;
+  @apply rounded-md;
+  @apply bg-zinc-100;
+  @apply hover:bg-zinc-500;
+  @apply hover:text-zinc-200;
 }
 
 .page-item.active {
-    @apply bg-zinc-400;
+  @apply bg-zinc-500;
+  @apply text-zinc-200;
+}
+
+.page-item a:hover {
+  @apply text-zinc-200;
+}
+
+.dropdown:hover .dropdown-content {
+  @apply flex;
+  @apply flex-col;
 }
