Improve image on home page

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col items-center justify-center w-full">
   <div class="flex items-center justify-center lg:justify-between py-3 w-full max-w-7xl">
-    {{ with resources.Get .Site.Params.logo }}
+    {{ with resources.Get .Site.Params.imgLogo }}
       <a href="/">
         <img src="{{ .RelPermalink }}" class="hidden lg:block w-28 rounded-sm">
       </a>
