--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,5 +1,10 @@
 {{ define "main" }}
   <div class="flex flex-col items-center justify-center gap-12">
+    <div class="flex flex-col items-center justify-center">
+      {{ with resources.Get .Site.Params.imgHome }}
+        <img src="{{ .RelPermalink }}" width="1200">
+      {{ end }}
+    </div>
     <div class="flex flex-col items-center justify-center gap-4">
       {{ .Content }}
     </div>
