Improve menu, header and footer

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -2,7 +2,7 @@
   <div class="flex flex-col items-center justify-center gap-12">
     <div class="flex flex-col items-center justify-center">
       {{ with resources.Get .Site.Params.imgHome }}
-        <img src="{{ .RelPermalink }}" width="1200">
+        <img src="{{ .RelPermalink }}" alt="ESV-Heim" width="1200">
       {{ end }}
     </div>
     <div class="flex flex-col items-center justify-center gap-4">
