--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<p class="flex items-center justify-center gap-2 py-4 text-sm">
+<p class="flex items-center justify-center gap-2 p-4 text-sm">
   <span>Copyright &copy; {{ now.Year }} - ESV Deggendorf</span>
   <span>|</span>
   <a class="underline" href="/impressum">Impressum</a>
