--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-center lg:justify-between py-3 w-full max-w-7xl">
     {{ with resources.Get .Site.Params.imgLogo }}
       <a href="/">
-        <img src="{{ .RelPermalink }}" class="hidden lg:block w-28 rounded-sm">
+        <img class="lg:block hidden rounded-sm opacity-90" src="{{ .RelPermalink }}" alt="ESV-Logo" width="100">
       </a>
     {{ end }}
     {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
