--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -26,7 +26,7 @@ Renders a menu for the given menu ID.
               <span for="{{ $name }}">{{ $name }}</span>
               <span class="text-xs">&#9660;</span>
             </span>
-            <ul class="dropdown-content border border-zinc-500 bg-zinc-800 py-1 z-50 absolute hidden">
+            <ul class="dropdown-content lg:absolute lg:hidden lg:border border-zinc-500 bg-zinc-800 py-1 z-50">
             {{- range .Children }}
               <li class="px-4 py-1">
                 <a href="{{ .URL }}">{{ .Name }}</a>
