--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,14 +3,10 @@
   <span>|</span>
   <a class="underline" href="/impressum">Impressum</a>
   <span>|</span>
-  <a href="https://www.facebook.com/EisenbahnerSportvereinDeggendorf/">
-    {{ with resources.Get "images/facebook.svg" }}
-      <img src="{{ .RelPermalink }}" alt="Facebook" width="25" />
-    {{ end }}
+  <a href="https://www.facebook.com/EisenbahnerSportvereinDeggendorf/" target="_blank">
+    <img src="/icon-facebook.svg" alt="Facebook" width="25" />
   </a>
-  <a href="https://www.instagram.com/esvdeggendorf/">
-    {{ with resources.Get "images/instagram.svg" }}
-      <img src="{{ .RelPermalink }}" alt="Instagram" width="25" />
-    {{ end }}
+  <a href="https://www.instagram.com/esvdeggendorf/" target="_blank">
+    <img src="/icon-instagram.svg" alt="Instagram" width="25" />
   </a>
 </p>
