--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+<link rel="shortcut icon" type="image/png" href="/favicon.png">
 <title>
   {{ if .IsHome }}
     {{ site.Title }}
