--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,13 +1,13 @@
 <div class="flex flex-col items-center justify-center w-full">
-  <div class="flex items-center justify-center lg:justify-between py-3 w-full max-w-7xl">
+  <div class="flex items-center justify-center lg:justify-between px-10 w-full">
     {{ with resources.Get .Site.Params.imgLogo }}
-      <a href="/">
+      <a class="py-2" href="/">
         <img class="lg:block hidden rounded-sm opacity-90" src="{{ .RelPermalink }}" alt="ESV-Logo" width="100">
       </a>
     {{ end }}
-    <div class="flex flex-col lg:flex-row items-center justify-center gap-4">
+    <div class="flex flex-col lg:flex-row items-center justify-center gap-6">
       {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
-      <a class="bg-red-950 hover:bg-red-900 rounded-lg text-lg px-4 py-2" href="https://esv-deggendorf.courtbooking.de" target="_blank">
+      <a class="bg-red-950 hover:bg-red-900 rounded-lg text-lg px-4 py-2 my-4 transition-all" href="https://esv-deggendorf.courtbooking.de" target="_blank">
         <span class="text-zinc-200">Courtbooking</span>
       </a>
     </div>
