--- a/layouts/shortcodes/jugend-section.html
+++ b/layouts/shortcodes/jugend-section.html
@@ -1,3 +1,3 @@
-<div class="flex flex-col lg:flex-row flex-wrap items-center justify-center gap-8 pt-4 pb-8">
+<div class="flex flex-col lg:flex-row flex-wrap items-center justify-center gap-8 pt-4 pb-8 px-8">
   {{ .Inner }}
 </div>
