--- a/layouts/shortcodes/image-card.html
+++ b/layouts/shortcodes/image-card.html
@@ -1,4 +1,10 @@
-<div class="flex flex-col text-xl bg-zinc-100 p-4 shadow-md">
-  <img class="pb-4" src="{{ (resources.Get .Params.imgSrc).RelPermalink }}" alt="{{ .Params.imgAlt }}" width="{{ .Params.imgWidth }}" />
+<div class="flex flex-col gap-2 text-xl bg-zinc-100 p-4 shadow-md">
+  {{- if resources.Get .Params.imgSrc }}
+    <img src="{{ (resources.Get .Params.imgSrc).RelPermalink }}" alt="{{ .Params.imgAlt }}" width="{{ .Params.imgWidth }}" />
+  {{- else }}
+    <div class="flex items-center justify-center h-60 w-96 bg-zinc-800 text-zinc-200 opacity-80">
+      <h1>{{ .Params.imgAlt }}</h1>
+    </div>
+  {{- end }}
   {{ .Inner }}
 </div>
