--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -8,10 +8,10 @@
     <div class="flex flex-col items-center justify-center gap-4">
       {{ .Content }}
     </div>
-    <div class="flex flex-col lg:flex-row flex-wrap items-center justify-center gap-0 lg:gap-8">
+    <div class="flex flex-col lg:flex-row flex-wrap items-stretch justify-center gap-4 lg:gap-8 mb-4 min-h-fit">
       {{ $section := where .Site.RegularPages "Section" "in" "news" }}
       {{ range (first 3 $section) }}
-        <div class="flex flex-col p-6 mb-4 bg-zinc-100 w-96">
+        <div class="basis-96 flex flex-col p-6 bg-zinc-100">
           <div class="flex flex-col mb-4">
             <h3><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h3>
             {{ $dateMachine := .Date | time.Format "2006-01-02" }}
