--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<link rel="shortcut icon" type="image/png" href="/favicon.png">
+{{ with resources.Get .Site.Params.favicon }}
+<link rel="shortcut icon" type="image/png" href="{{ .RelPermalink }}">
+{{ end }}
 <title>
   {{ if .IsHome }}
     {{ site.Title }}
