--- a/layouts/shortcodes/veranstaltungen-section.html
+++ b/layouts/shortcodes/veranstaltungen-section.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row w-full {{ if .Params.border }}border-b border-gray-500 mb-4 pb-4{{ end }}">
+<div class="flex flex-row w-full gap-4 lg:gap-0 {{ if .Params.border }}border-b border-gray-500 mb-4 pb-4{{ end }}">
   <div class="flex-1">
     <h4>{{ .Params.eventDate }}</h4>
   </div>
