--- a/layouts/page/downloads.html
+++ b/layouts/page/downloads.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="flex flex-col items-center justify-center text-2xl">
+  <div class="flex flex-col items-start lg:items-center justify-center text-2xl">
     {{ .Content }}
   </div>
 {{ end }}
