--- a/layouts/page/veranstaltungen.html
+++ b/layouts/page/veranstaltungen.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="flex flex-col items-center justify-center">
+  <div class="flex flex-col items-start lg:items-center justify-center">
     {{ .Content }}
   </div>
 {{ end }}
