--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -11,7 +11,7 @@ Renders a menu for the given menu ID.
 {{- $menuID := .menuID }}
 
 {{- with index site.Menus $menuID }}
-  <nav id="main-nav" class="text-lg" data-menu-open="false">
+  <nav id="main-nav" class="text-lg z-50" data-menu-open="false">
     <ul class="flex flex-col lg:flex-row gap-0 lg:gap-4">
       {{- range . }}
         {{- $URL := .URL }}
@@ -26,7 +26,7 @@ Renders a menu for the given menu ID.
               <span for="{{ $name }}">{{ $name }}</span>
               <span class="text-xs">&#9660;</span>
             </span>
-            <ul class="dropdown-content lg:absolute lg:hidden lg:border lg:border-zinc-500 lg:bg-zinc-800 py-1 z-50">
+            <ul class="dropdown-content lg:absolute lg:hidden lg:border lg:border-zinc-500 lg:bg-zinc-800 py-1">
             {{- range .Children }}
               <li class="px-4 py-1">
                 <a href="{{ .URL }}">{{ .Name }}</a>
