--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,13 +1,14 @@
 {{ define "main" }}
-  <div class="flex flex-col items-center justify-center gap-12">
+  <div class="flex flex-col items-center justify-center gap-8">
+    <div class="flex flex-col items-center justify-center gap-4 w-4/5">
+      {{ .Content }}
+    </div>
     <div class="flex flex-col items-center justify-center">
       {{ with resources.Get .Site.Params.imgHome }}
         <img src="{{ .RelPermalink }}" alt="ESV-Heim" width="1200">
       {{ end }}
     </div>
-    <div class="flex flex-col items-center justify-center gap-4">
-      {{ .Content }}
-    </div>
+    <h2>Aktuelle Beiträge vom ESV Deggendorf</h2>
     <div class="flex flex-col lg:flex-row flex-wrap items-stretch justify-center gap-4 lg:gap-8 mb-4 min-h-fit">
       {{ $section := where .Site.RegularPages "Section" "in" "news" }}
       {{ range (first 3 $section) }}
