--- a/layouts/shortcodes/veranstaltungen-section.html
+++ b/layouts/shortcodes/veranstaltungen-section.html
@@ -1,8 +1,11 @@
 <div class="flex flex-row w-full gap-4 lg:gap-0 {{ if .Params.border }}border-b border-gray-500 mb-4 pb-4{{ end }}">
   <div class="flex-1">
-    <h4>{{ .Params.eventDate }}</h4>
+    <h4>{{- .Params.eventDate -}}</h4>
   </div>
   <div class="flex-[2]">
-    <h4>{{ .Params.eventTitle }}</h4>
+    <h4>
+      {{- .Params.eventTitle -}}
+      {{ if .Params.eventLink }}&nbsp;-&nbsp;<a href="{{ .Params.eventLink }}" target="_blank" class="italic underline">Anmeldung</a>{{ end }}
+    </h4>
   </div>
 </div>
