--- a/layouts/shortcodes/logo-card.html
+++ b/layouts/shortcodes/logo-card.html
@@ -1,5 +1,11 @@
 <a href="{{ .Params.link }}" target="_blank">
   <div class="flex flex-col align-center justify-center bg-zinc-100 h-56 w-56 p-2 shadow-md">
-    <img src="{{ (resources.Get .Params.imgSrc).RelPermalink }}" alt="{{ .Params.imgAlt }}" />
+    {{- if resources.Get .Params.imgSrc }}
+      <img src="{{ (resources.Get .Params.imgSrc).RelPermalink }}" alt="{{ .Params.imgAlt }}" />
+    {{- else }}
+      <div class="flex items-center justify-center w-full h-full">
+        <img alt="{{ .Params.imgAlt }}" class="text-center text-4xl" />
+      </div>
+    {{- end }}
   </div>
 </a>
