--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -14,6 +14,9 @@
         {{ $section := where .Site.RegularPages "Section" "in" "news" }}
         {{ range (first 3 $section) }}
           <div class="basis-96 flex flex-col p-6 bg-zinc-100">
+            {{- if resources.Get .Params.preview }}
+              <img class="pb-2" src="{{ (resources.Get .Params.preview).RelPermalink }}" alt="Preview" />
+            {{- end }}
             <div class="flex flex-col mb-4">
               <h3><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h3>
               {{ $dateMachine := .Date | time.Format "2006-01-02" }}
