--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,6 +6,9 @@
     <div class="flex flex-col lg:flex-row flex-wrap items-stretch justify-center gap-4 lg:gap-8 mb-4 min-h-fit">
       {{ range .Paginator.Pages }}
         <div class="basis-96 flex flex-col p-6 bg-zinc-100">
+          {{- if resources.Get .Params.preview }}
+            <img class="pb-2" src="{{ (resources.Get .Params.preview).RelPermalink }}" alt="Preview" />
+          {{- end }}
           <div class="flex flex-col mb-4">
             <h3><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h3>
             {{ $dateMachine := .Date | time.Format "2006-01-02" }}
