--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,8 @@
   <span>|</span>
   <a class="underline" href="/impressum">Impressum</a>
   <span>|</span>
+  <a class="underline" href="/datenschutz">Datenschutz</a>
+  <span>|</span>
   <a href="https://www.facebook.com/EisenbahnerSportvereinDeggendorf/" target="_blank">
     {{ with resources.Get .Site.Params.iconFacebook }}
       <img src="{{ .RelPermalink }}" alt="Facebook" width="25" />
