--- a/layouts/shortcodes/info-section.html
+++ b/layouts/shortcodes/info-section.html
@@ -1,3 +1,3 @@
-<div class="flex flex-col items-center justify-center gap-1 p-2 bg-blue-200 w-full">
+<div class="flex flex-col items-center justify-center gap-1 p-4 bg-zinc-800 text-zinc-200 w-full">
   {{ .Inner }}
 </div>
