Update hugo and tailwindcss

--- a/layouts/shortcodes/veranstaltungen-section.html
+++ b/layouts/shortcodes/veranstaltungen-section.html
@@ -2,7 +2,7 @@
   <div class="flex-1">
     <h4>{{- .Params.eventDate -}}</h4>
   </div>
-  <div class="flex-[2]">
+  <div class="flex-2">
     <h4>
       {{- .Params.eventTitle -}}
       {{ if .Params.eventLink }}&nbsp;-&nbsp;<a href="{{ .Params.eventLink }}" target="_blank" class="italic underline">Anmeldung</a>{{ end }}
