--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-center lg:justify-between px-10 w-full">
     {{ with resources.Get .Site.Params.imgLogo }}
       <a class="py-2" href="/">
-        <img class="lg:block hidden rounded-sm opacity-90" src="{{ .RelPermalink }}" alt="ESV-Logo" width="100">
+        <img class="lg:block hidden rounded-xs opacity-90" src="{{ .RelPermalink }}" alt="ESV-Logo" width="100">
       </a>
     {{ end }}
     <div class="flex flex-col lg:flex-row items-center justify-center gap-6">
